# ksu-capstone-frontend

./: .gitignore  .gitmodules  Cargo.toml  README.md
client/: Cargo.toml  build.rs  index.html
client/.cargo/: config.toml
client/src/: lib.rs  native.rs
client/src/ui/: main.slint
server/: Cargo.toml  build.rs
server/src/: main.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
