[package]
    name    = "client"
    version = "0.2.0"
    edition = "2024"

[lib]
    crate-type = ["cdylib", "rlib"]
    path       = "src/lib.rs"
    name       = "client_lib"

[dependencies]
    shared     = { workspace = true }
    serde      = { workspace = true }
    serde_json = { workspace = true }

    tokio        = { version = "*", default-features = false, features = ["sync", "rt", "macros", "time"] }
    slint        = "*"
    async-compat = "*"
    web-sys      = { version = "*", features = ["WebSocket", "MessageEvent", "ErrorEvent", "Window", "Location", "console", "UiEvent"] }
    wasm-bindgen = { version = "*" }

[build-dependencies]
    anyhow      = "*"
    slint-build = "*"
    json        = "*"
