[package]
    name    = "client"
    version = "0.2.0"
    edition = "2024"

[lib]
    crate-type = ["cdylib", "rlib"]
    path       = "src/lib.rs"
    name       = "client_lib"

[dependencies]
    shared = { workspace = true }

    tokio        = { version = "*", default-features = false, features = ["sync", "rt", "macros", "time"] }
    slint        = "*"
    async-compat = "*"
    web-sys      = { version = "*", features = ["WebSocket", "MessageEvent", "ErrorEvent", "Window", "Location", "console", "UiEvent", "BinaryType"] }
    wasm-bindgen = { version = "*" }
    js-sys       = { version = "*" }
    image        = { version = "*", default-features = false, features = ["jpeg"] }

[build-dependencies]
    anyhow      = "*"
    slint-build = "*"
    json        = "*"
