[package]
    name    = "client"
    version = "0.3.0"
    edition = "2024"

[lib]
    crate-type = ["cdylib", "rlib"]
    path       = "src/lib.rs"
    name       = "client_lib"

[dependencies]
    shared               = { workspace = true }
    strum                = { workspace = true }
    tokio                = { version = "*", default-features = false, features = ["sync", "rt", "macros", "time"] }
    slint                = "*"
    async-compat         = "*"
    web-sys              = { version = "*", features = ["WebSocket", "MessageEvent", "ErrorEvent", "Window", "Location", "console", "UiEvent", "BinaryType", "Blob", "BlobPropertyBag", "ImageBitmap", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Document", "Element"] }
    wasm-bindgen         = { version = "*" }
    wasm-bindgen-futures = { version = "*" }
    js-sys               = { version = "*" }

[build-dependencies]
    anyhow      = "*"
    slint-build = "*"
    json        = "*"
