[package]
    name    = "server"
    version = "0.1.0"
    edition = "2024"
    build   = "build.rs"

[dependencies]
    axum        = "*"
    tokio       = { version = "*", features = ["full"] }
    mime_guess  = "*"
    include_dir = "*"
    webbrowser  = "*"

[build-dependencies]
    anyhow                   = "*"
    wasm-bindgen-cli-support = "*"
