[package]
    name    = "server"
    version = "0.2.0"
    edition = "2024"
    build   = "build.rs"

[dependencies]
    shared     = { workspace = true }
    serde      = { workspace = true }
    serde_json = { workspace = true }

    tokio             = { version = "*", features = ["full"] }
    tokio-tungstenite = "*"
    futures-util      = "*"
    reqwest           = { version = "*", features = ["json"] }
    axum              = { version = "*", features = ["ws"] }
    mime_guess        = "*"
    include_dir       = "*"
    webbrowser        = "*"

[build-dependencies]
    anyhow                   = "*"
    wasm-bindgen-cli-support = "*"
